--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div id="titleNav">
             <h1><span id="titleM">K-</span><span>Grooves</span></h1>
             <ul id="linkList">
-                <li id="liHome"><a href="#feat">Features</a></li>
-                <li id="liMusic"><a href="#musicSec">Music</a></li>
+                <li id="liHome"><a href="#album">Albums</a></li>
                 <li id="liContact"><a href="#feat">Features</a></li>
+                <li id="liMusic"><a href="#musicSec">Music</a></li>
                 <li id="liBlog"><a href="#conta">Contact</a></li>
             </ul>
         </div>
@@ -103,7 +103,7 @@
                 <div class="featureList">
                     <i class='bx bx-heart-circle'></i>
                     <h2>Add Your Favorites</h2>
-                    <p>Save and access your favorite songs with a click.</p>
+                    <p>Save and access your favorite songs.</p>
                 </div>
             </div>
         </section>
