--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
     <section class="footer" id="conta">
         <div class="creator">
-            <p>a produt by</p>
+            <p>a product by</p>
             <h3>KeerthiKeswaran</h3>
             <p>Hope you love it !</p>
         </div>
