--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
             <h3>Contact Us</h3>
             <p>kgroovesupport@gmail.com</p>
         </div>
+        <p id="copyright">© K-Groove 2024 KeerthiKeswaran K S</p>
     </section>
     <script src="script.js"></script>
 </body>
